--- a/reminder_messages.qmd
+++ b/reminder_messages.qmd
@@ -12,10 +12,12 @@ Please include the time in the participant's Time Zone **first**, followed by Ce
 
 When you are sending reminders that aren't for tomorrow - for example, if you are sending a Monday visit reminder, on a Friday - PLEASE be sure to change "tomorrow" to the actual day of the visit!
 
+Sometimes, when a participant reschedules a visit, their phone number doesn't copy to the new google calendar event. If you need to send a reminder but there's no phone number, go into the star_psych outlook account and search by name for the original booking, which will have the number.
+
 
 ### How to get time zones:
 
-To get time zones for a Consent/Onboard session:
+#### To get time zones for a Consent/Onboard session:
 
 Copy and paste the following code in the Console pane of RStudio; then hit enter to run:
 ```r
@@ -43,7 +45,7 @@ screen <- tidy_qualtrics("screening", token_qualtrics,  display_progress = FALSE
 Click on the "screen" dataframe at the top-right hand side and search by their phone number or email. Look for the column "screen_state". There's also latitude/longitude columns that you can copy & paste into google (put a comma between them) and google will tell you the location zip code and you can use that to check the time zone: ie. 38.946106, -89.417999
 
 
-To verify the time zone of a current participant (1-week or final visit):
+#### To verify the time zone of a current participant (1-week or final visit):
 
 Copy & paste the following code in the Console pane of RStudio (hit enter to run):
 
@@ -72,7 +74,9 @@ STAR Study Team
 
 ```html
 Hello!
-This is a reminder that you have your STAR Study one-week check-in at {INSERT TIME} (INSERT TIME ZONE ABBREVIATION)/{INSERT TIME} CENTRAL TIME (CST), tomorrow, DATE, MONTH DATE. The call should take 5-10 minutes and you'll be compensated $10 for attending. The call will also come from a 608 area code. Thank you and I look forward to speaking with you soon!
+This is a reminder that you have your STAR Study one-week check-in at {INSERT TIME} (INSERT TIME ZONE ABBREVIATION)/{INSERT TIME} CENTRAL TIME (CST), tomorrow, DATE, MONTH DATE. The call should take 5-10 minutes and you'll be compensated $10 for attending. The call will also come from a 608 area code. Please text 'C' to CONFIRM this appointment.
+
+Thank you and I look forward to speaking with you soon!
 
 {YOUR NAME},
 STAR Study Team
