--- a/ra_tasks.qmd
+++ b/ra_tasks.qmd
@@ -4,7 +4,7 @@
 ## Start of shift
 1. Hit "Fetch origin" in Github Desktop so you have the latest copy of the code repo.
 2. Open Slack. We recommend that you enable notifications and/or check it frequently (if using it via a web browser) as this is the primary way we'll communicate with you during your shift, and sometimes we might send messages that require timely responses
-3. Open Google Calendar to check for assigned sessions. Visits are color coded, and staff will tell you what color is yours to run.
+3. Open Google Calendar to check for assigned sessions. Make sure both the **STAR Study** calendar and **arc_psych\@wisc.edu** calendar are visible, as visits could be shown on either one. Visits are color coded, and staff will tell you what color is yours to run.
 4. Open Rstudio (if any code will need to be run) and make sure the analysis_risk2 project is open
 
 ## During your shift
