--- a/consent_onboarding_script.qmd
+++ b/consent_onboarding_script.qmd
@@ -13,7 +13,7 @@ After participants give Consent using the Consent/Onboarding Qualtrics Form, the
 Once participants complete this form, they are enrolled in the study, and the STAR app download will begin automatically.
 
 ## Steps To Complete BEFORE Successful Onboarding Session
-1. Verify participant's name and phone number from Google calendar.
+1. Verify participant's name and phone number from Google calendar. When you dial out using a desk phone, you need to hit 1+1 prior to entering their 10 digit number. (Sometimes it will take 1+10 digit, but other times it fails, so 1+1 is safest)
 
 2. Find the reminder text in google voice.  Prepare the link to the consent form as a text ready to send (but don't send until the script tells you to do so). Copy & paste both the text and qualtrics link below (everything on the next line):
 
